[package]
name = "pallet-cross-settlement"
version = "1.0.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
pallet-operators = { path = "../operators", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
pallet-settlement-engine = { path = "../settlement-engine", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "pallet-operators/std",
    "pallet-asset-registry/std",
    "pallet-settlement-engine/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
]

[lib]
name = "pallet_cross_settlement"
path = "src/lib.rs"
crate-type = ["rlib"]
