[package]
name = "pallet-settlement-proofs"
version = "1.0.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true, default-features = false, optional = true }
frame-system = { workspace = true, default-features = false, optional = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
pallet-settlement-engine = { path = "../settlement-engine", default-features = false }

[features]
default = ["std", "frame-support", "frame-system"]
std = [
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "codec/std",
    "pallet-settlement-engine/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-settlement-engine/try-runtime",
]

[lib]
name = "pallet_settlement_proofs"
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
pallet-operators = { path = "../operators", features = ["std"] }
pallet-asset-registry = { path = "../asset-registry", features = ["std"] }
pallet-settlement-engine = { path = "../settlement-engine", features = ["std"] }
